<resources>
    <string name="app_name">NewsHub</string>
    <string name="news">News</string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="an_image_included_with_the_news_article">An image included with the news article</string>
    <string name="date">Date</string>
    <string name="article_object">article_object</string>
    <string name="source_name">source_name</string>
    <string name="source">Source</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="to_continue_reading">To continue reading:</string>
    <string name="link_here">Link Here</string>
    <string name="an_image_to_show_if_the_article_is_liked_or_not">An image to show if the article is liked or not</string>
    <string name="an_image_of_an_x_to_delete_items">An image of an x to delete items.</string>
    <string name="no_network_message">No network, can not do operation.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="clear_favorites_backup">Clear Favorites Backup</string>
    <string name="account_created">Account Created.</string>
    <string name="username_taken">Username taken.</string>
    <string name="backup_updated">Backup Updated.</string>
    <string name="please_enter_username">Please enter your username.</string>
    <string name="please_enter_password">Please enter your password.</string>
    <string name="invalid_credentials">Invalid credentials.</string>
    <string name="failure">Failure</string>
    <string name="online_backup_deleted">Online backup deleted.</string>
    <string name="please_connect_to_network">Please connect to a network.</string>
    <string-array name="category">
        <item>business</item>
        <item>entertainment</item>
        <item>general</item>
        <item>health</item>
        <item>science</item>
        <item>sports</item>
        <item>technology</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="open_favorites">open_favorites</string>
    <string name="settings">Settings</string>
</resources>
