<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateAccountFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_create_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_create_password"
        android:hint="@string/username"
        app:backgroundTint="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:inputType="text" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        app:backgroundTint="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_create_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_create_password"
        android:hint="@string/confirm_password"
        app:backgroundTint="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_shape"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimary"
        android:layout_margin="16dp"/>

</RelativeLayout>