<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignInFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/view_sign_in"
        android:hint="@string/username"
        app:backgroundTint="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:inputType="text" />

    <View
        android:id="@+id/view_sign_in"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_sign_in"
        android:hint="@string/password"
        app:backgroundTint="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_shape"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"
        android:layout_margin="16dp"/>

</RelativeLayout>