<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:strokeColor="@color/black"
    app:strokeWidth="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/iv_news"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_news_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_news_title"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/iv_news"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/iv_news"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/an_image_included_with_the_news_article" />


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>