<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp"
    app:strokeColor="@color/black"
    app:strokeWidth="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_favorites_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/iv_favorites_delete"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/tv_favorites_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/iv_favorites_delete"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_favorites_title"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:autoLink="web"
            android:text="@string/link_here"/>

        <ImageView
            android:id="@+id/iv_favorites_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/an_image_of_an_x_to_delete_items"
            android:padding="16dp"
            android:src="@drawable/ic_clear_black_24dp" />
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>